--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,9 @@
 
       <div class="trigger">
         <!-- {{ site.title }} instead of blog -->
-        <a class="page-link" href="{{ site.baseurl }}/">blog</a>
-
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
+        <a class="page-link" href="{{ site.baseurl }}/">home</a>
+        <a class="page-link" href="{{ site.baseurl }}/articles">articles</a>
+        <a class="page-link" href="{{ site.baseurl }}/about">about</a>
 
       </div>
     </nav>
