--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,12 @@
 <header class="site-header">
 
   <div class="wrapper">
-
+    <a class="header-title">Haryo Sukmawanto</a>
     <nav class="site-nav">
-
       <div class="trigger">
-        <!-- {{ site.title }} instead of blog -->
-        <a class="page-link" href="{{ site.baseurl }}/">home</a>
+        <a class="page-link" href="{{ site.baseurl }}/">projects</a>
         <a class="page-link" href="{{ site.baseurl }}/articles">articles</a>
         <a class="page-link" href="{{ site.baseurl }}/about">about</a>
-
       </div>
     </nav>
 
