--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,6 +24,12 @@ text-decoration: none;
 color: $theme-color;
     }
 }
+
+.header-title {
+    font-size: 200%;
+    line-height: $nav-height;
+}
+
 .site-nav {
 float: right;
 line-height: $nav-height;
@@ -58,12 +64,12 @@ display: line;
     opacity: 0.75;
     width: 100%;
     text-align: center;
-    padding-top: 25px;
+    padding-top: 0px;
     line-height: 3em;
     z-index: 25;
     h1{
         color: $theme-color;
-        font-size:75px;
+        font-size:50px;
     }
     h2{
         font-size:25px;
@@ -109,7 +115,7 @@ color: $theme-color;
  * Page content   **********************************************************
  */
 .page-content {
-padding: 100px 0; /* VERTICAL PADDING FOR TITLE ON EVERY PAGE */
+padding: 80px 0; /* VERTICAL PADDING FOR TITLE ON EVERY PAGE */
 }
 .page-heading {
 font-size: 20px;
