--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header class="site-header">
 
   <div class="wrapper">
-    <a class="header-title">Haryo Sukmawanto</a>
+    <a class="header-title" href="{{ site.baseurl }}/">Haryo Sukmawanto</a>
     <nav class="site-nav">
       <div class="trigger">
-        <a class="page-link" href="{{ site.baseurl }}/">projects</a>
+        <a class="page-link" href="{{ site.baseurl }}/"></a>projects</a>
         <a class="page-link" href="{{ site.baseurl }}/articles">articles</a>
         <a class="page-link" href="{{ site.baseurl }}/about">about</a>
       </div>
