--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <a class="header-title" href="{{ site.baseurl }}/">Haryo Sukmawanto</a>
     <nav class="site-nav">
       <div class="trigger">
-        <a class="page-link" href="{{ site.baseurl }}/"></a>projects</a>
+        <a class="page-link" href="{{ site.baseurl }}/">projects</a>
         <a class="page-link" href="{{ site.baseurl }}/articles">articles</a>
         <a class="page-link" href="{{ site.baseurl }}/about">about</a>
       </div>
