More minor layout changes Rearranging projects

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -189,6 +189,10 @@ font-size: 16px;
     }
 }
 
+.article-title {
+    padding-bottom: 15px;
+}
+
 
 /** 
  * Portfolio grid **********************************************************
