--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,6 +5,9 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
+    <h5 class="post-description">{{ page.year }}</h5>    
+    <h5 class="post-description">{{ page.description }}</h5>
+
   </header>
 
   <article class="post-content">
