--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,15 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
+h4 {
+    margin-top: 10px;
+    margin-left: 25px
+}
+
+h5 {
+    margin-left: 25px
+}
+
 /** Variables **********************************************/
 $base-font-family:              Helvetica, sans-serif;
 $base-line-height:              1.5em;
@@ -142,8 +151,6 @@ article a {
         text-decoration: none;
     }
 }
-
-
 
 /**
  * Blockquotes
