- Adding layout adjustments to thumbnail images - Added images to article BreakingNews - Adding article MyMirrorBook

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -124,7 +124,7 @@ font-size: 20px;
 margin: 0px 0;
 list-style: none;
     > li {
-margin-bottom: $vertical-spacing-unit;
+margin-bottom: $vertical-spacing-unit/2;
     }
 }
 .contacticon {
