First working version of filter

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -161,6 +161,10 @@ ul#projectlist li:not(:first-child) {
  * Filter list
  */
 
+ .filterDiv {
+    display: none; /* Hidden by default */
+  }
+
 /* The "show" class is added to the filtered elements */
 .show {
     display: block;
