Changed template commercial projects Added BackburnerPy and blender_lifting to projects

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -119,8 +119,8 @@ li {
 ul#projectlist {
     margin-bottom: -5px;
     margin-top: -20px;
-    margin-right: 10px;
-    text-align: right;
+    // margin-right: 10px;
+    text-align: center;
 }
 
 ul#projectlist li {
