--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -117,8 +117,8 @@ li {
 }
 
 ul#projectlist {
-    margin-bottom: -5px;
-    margin-top: -20px;
+    margin-bottom: -0px;
+    margin-top: -15px;
     // margin-right: 10px;
     text-align: center;
 }
@@ -143,17 +143,19 @@ ul#projectlist li:not(:first-child) {
     outline: none;
     background: none;
     color: #666;
-    // padding: 12px 16px;
+    font-size: 14px;
+    // margin-bottom: -5px;
     // background-color: #f1f1f1;
     cursor: pointer;
   }
 
 /* Add a light grey background on mouse-over */
 .btn:hover {
-    color: #333;
+    color: #444;
   }
 
 .btn.active {
+    color: #222;
     font-weight: bold;
     }
 
