--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,11 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
+h1 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 h4 {
     margin-top: 10px;
     margin-left: 25px
