Adding article PTSDevLog3

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -47,7 +47,7 @@ $grey: rgb(90, 90, 90);
 $grey-color-dark: #333;   /* footer */
 $grey-color-light: #ddd;  /* navigation bar border */
 $text-color:     #666;
-$article-link-color:     #8099aa;
+$article-link-color:     #aaaaaa;
 
 /* Set theme color *************************/
 $theme-color: $grey;
