Fixed names articles Added Digital Viewing Room project to commercial Added quote to The Harvest

--- a/_layouts/projectlist.html
+++ b/_layouts/projectlist.html
@@ -13,7 +13,7 @@
     </div>
 
     <ul class="wrapper" id="clientlist">
-      <h2>Other previous clients:</h2>
+      <h2>Other clients:</h2>
       <li>
         <div class="clientimage">
           <a href="https://www.alice-hr.be/">
