Refactored site structure to use 'collaboration' term instead of 'commercial'

--- a/_layouts/collaborations.html
+++ b/_layouts/collaborations.html
@@ -5,9 +5,8 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
-    <h3 class="post-description">Client: <a style="text-decoration:underline" href="{{ page.client_url }}">{{ page.client }}</a></h5>
+    <h3 class="post-description">Partner: <a style="text-decoration:underline" href="{{ page.partner_url }}">{{ page.partner }}</a></h5>
     <h3 class="post-description">{{ page.description }}</h5>
-
   </header>
 
   <article class="post-content">
