--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <nav class="site-nav">
       <div class="trigger">
         <a class="page-link" href="{{ site.baseurl }}/">projects</a>
-        <a class="page-link" href="{{ site.baseurl }}/commercial">commercial</a>
+        <a class="page-link" href="{{ site.baseurl }}/collaborations">collaborations</a>
         <a class="page-link" href="{{ site.baseurl }}/articles">articles</a>
         <a class="page-link" href="{{ site.baseurl }}/about">about</a>
       </div>
